refactor: update HomeController to return List of Movies and Songs and improve Thymeleaf views